# backlightd

./: 95-backlightd.rules  Cargo.toml  LICENSE  Makefile  README.md  backlightd.service
.github/workflows/: audit.yml  build.yml
backlight_ipc/: Cargo.toml
backlight_ipc/src/: lib.rs
backlightctl/: Cargo.toml
backlightctl/src/: main.rs
backlightd/: Cargo.toml
backlightd/src/: acpi.rs  auto.rs  ddc.rs  location.rs  main.rs  monitors.rs
