[package]
name = "backlightd"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
pretty_env_logger = "0.5.0"
ddc-hi = "0.4.1"
backlight_ipc = { path = "../backlight_ipc" }
anyhow = "1.0.93"
sunrise-next = "1.2"
chrono = "0.4.38"
ureq = { version = "2.10.1", features = ["json", "proxy-from-env"] }
serde = "1.0"
toml = "0.8.19"
